test_suite5/ALAN/test_suite/alan-2022-examples/failing/007210_mutation.alan
source t9e begin put "82" . "?" call end
